add points and assigned parts. color could be changed

--- a/production/index.html
+++ b/production/index.html
@@ -293,9 +293,9 @@
                     <div class="row">
                         <!-- Initial Tasks -->
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <div class="x_panel min_height_320 border-color-danger">
+                            <div class="x_panel  border-color-danger">
                                 <div class="x_title">
-                                    <h2>Initial Tasks
+                                    <h2>Initial Stage
                                         <small>Sessions</small>
                                     </h2>
                                     <ul class="nav navbar-right panel_toolbox">
@@ -316,18 +316,35 @@
                                     </ul>
                                     <div class="clearfix"></div>
                                 </div>
-                                <div class="x_content connectedSortable">
+                                <div class="x_content connectedSortable" data-task-style="panel panel-info">
                                     <div class="panel panel-info">
                                         <div class="panel-heading"><h3 class="panel-title">#3314 Show Profile</h3></div>
-                                        <div class="panel-body"> As a user, I'd like to see my profile</div>
+                                        <div class="panel-body">
+                                                As a user, I'd like to see my profile
+                                        </div>
+                                        <div class="task-desc-footer">
+                                            <hr />
+                                            <div><span class="task-footer-title">Assigned To: </span><a href="#">Ryan</a></div>
+                                            <div><span class="task-footer-title">Points: </span>5</div>
+                                        </div>
                                     </div>
                                     <div class="panel panel-info">
                                         <div class="panel-heading"><h3 class="panel-title">#3315 Change Icon</h3></div>
                                         <div class="panel-body"> Please find the attached icon image....</div>
+                                        <div class="task-desc-footer">
+                                            <hr />
+                                            <div><span class="task-footer-title">Assigned To: </span><a href="#">Aradhya, Rakin</a></div>
+                                            <div><span class="task-footer-title">Points: </span>6</div>
+                                        </div>
                                     </div>
                                     <div class="panel panel-info">
                                         <div class="panel-heading"><h3 class="panel-title">#3316 Grant to Loan</h3></div>
                                         <div class="panel-body"> Here is the rules......</div>
+                                        <div class="task-desc-footer">
+                                            <hr />
+                                            <div><span class="task-footer-title">Assigned To: </span><a href="#">Zach</a></div>
+                                            <div><span class="task-footer-title">Points: </span>3</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -335,7 +352,7 @@
 
                         <!-- Work In Progress  -->
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <div class="x_panel min_height_320 border-color-danger">
+                            <div class="x_panel  border-color-danger">
                                 <div class="x_title">
                                     <h2>Work In Progress
                                         <small>Sessions</small>
@@ -358,10 +375,15 @@
                                     </ul>
                                     <div class="clearfix"></div>
                                 </div>
-                                <div id="container-warning" class="x_content connectedSortable">
+                                <div id="container-warning" class="x_content connectedSortable" data-task-style="panel panel-warning">
                                     <div class="panel panel-warning">
                                         <div class="panel-heading"><h3 class="panel-title">#3319 Credit Check</h3></div>
                                         <div class="panel-body"> In order to have a better service......</div>
+                                        <div class="task-desc-footer">
+                                            <hr />
+                                            <div><span class="task-footer-title">Assigned To: </span><a href="#">Airc</a></div>
+                                            <div><span class="task-footer-title">Points: </span>2</div>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -370,7 +392,7 @@
 
                         <!-- Verification  -->
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <div class="x_panel min_height_320 border-color-danger">
+                            <div class="x_panel  border-color-danger">
                                 <div class="x_title">
                                     <h2>Verification
                                         <small>Sessions</small>
@@ -393,10 +415,15 @@
                                     </ul>
                                     <div class="clearfix"></div>
                                 </div>
-                                <div class="x_content connectedSortable">
-                                    <div id="panel-danger" class="panel panel-danger ">
+                                <div class="x_content connectedSortable" data-task-style="panel panel-danger">
+                                    <div id="panel-danger" class="panel panel-danger " >
                                         <div class="panel-heading"><h3 class="panel-title">#3344 Responsive Landing Page</h3></div>
                                         <div class="panel-body"> Please make the SFA landing page responsive....</div>
+                                        <div class="task-desc-footer">
+                                            <hr />
+                                            <div><span class="task-footer-title">Assigned To: </span><a href="#">Ryan, Zach</a></div>
+                                            <div><span class="task-footer-title">Points: </span>2</div>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -405,7 +432,7 @@
 
                         <!-- Completed  -->
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <div class="x_panel min_height_320 border-color-danger">
+                            <div class="x_panel  border-color-danger">
                                 <div class="x_title">
                                     <h2>Completed
                                         <small>Sessions</small>
@@ -428,10 +455,15 @@
                                     </ul>
                                     <div class="clearfix"></div>
                                 </div>
-                                <div class="x_content connectedSortable">
+                                <div class="x_content connectedSortable" data-task-style="panel panel-success">
                                     <div class="panel panel-success">
                                         <div class="panel-heading"><h3 class="panel-title">#3348 Logout Feature</h3></div>
                                         <div class="panel-body"> Here is the rule......</div>
+                                        <div class="task-desc-footer">
+                                            <hr />
+                                            <div><span class="task-footer-title">Assigned To: </span><a href="#">Aradhya, Rakin</a></div>
+                                            <div><span class="task-footer-title">Points: </span>7</div>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -446,9 +478,11 @@
             <!-- /page content -->
 
 
+
         </div>
     </div>
 
+</div>
     <!-- jQuery -->
     <script src="../vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
@@ -483,7 +517,12 @@
         $(document).ready(function () {
             $( ".x_content" ).sortable({
                 connectWith: ".x_content",
-                forcePlaceholderSize: true
+                forcePlaceholderSize: true,
+                stop: function(evt, ui) {
+                    var className = ui.item.parent().attr( 'data-task-style' );
+                    ui.item.attr('class',className);
+
+                }
             }).disableSelection();
 
         });
